# Qurix.ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  debug_frontend.py  package-lock.json  pyproject.toml  requirements.txt  scratch_test.py
profiles/linkedin/: Local State
profiles/linkedin/Default/: DIPS-wal  Extension Activity  Favicons  History  History-journal  MediaDeviceSalts  Preferences  Secure Preferences  Web Data
profiles/linkedin/Default/DawnGraphiteCache/: index
profiles/linkedin/Default/DawnWebGPUCache/: index
profiles/linkedin/Default/Extension Rules/: LOG
profiles/linkedin/Default/Extension Scripts/: LOG
profiles/linkedin/Default/Extension State/: LOG  LOG.old
profiles/linkedin/Default/GCM Store/: LOG  LOG.old
profiles/linkedin/Default/GPUCache/: data_0  data_1  data_2  index
profiles/linkedin/Default/Session Storage/: LOG  LOG.old
profiles/linkedin/Default/Sessions/: Session_13426243478681418  Tabs_13426244934198995  Tabs_13426245204541596
profiles/linkedin/Default/Site Characteristics Database/: LOG  LOG.old
profiles/linkedin/Default/WebStorage/: QuotaManager  QuotaManager-journal
profiles/linkedin/Default/shared_proto_db/: LOG  (+1 more)
profiles/linkedin/GrShaderCache/: data_0  data_1  f_000001  index
profiles/linkedin/ShaderCache/: index
profiles/linkedin/segmentation_platform/: ukm_db
src/: api.py  main.py  pdf_generator.py
src/autonomous_browser_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ui/: index.html  package-lock.json  package.json
ui/src/: App.jsx  index.css  new_styles.css
(+43 files in other folders)
