[project]
name = "autonomous-browser-agent"
version = "0.1.0"
description = "Autonomous Browser Agent with Playwright, FastAPI, LangGraph"
requires-python = ">=3.10"

# Core runtime dependencies
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "playwright==1.44.0",
    "langgraph==0.0.65",
    "langchain-google-genai==1.0.6",
    "asyncpg==0.29.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
